--- a/Arbeidskrav_1/index.html
+++ b/Arbeidskrav_1/index.html
@@ -7,6 +7,24 @@
     <title>Arbeidskrav1</title>
 </head>
 <body>
-    
+    <article>
+        <header>
+            <nav>
+                <button class="page-button">HTML</button>
+                <button class="page-button">CSS</button>
+                <button class="page-button">Javascript</button>
+                <button class="page-button">React</button>
+                <button class="page-button">Sanity and headless CMS</button>
+            </nav>
+        </header>
+        <main>
+            <section class="tab-page"></section>
+            <section class="tab-page"></section>
+            <section class="tab-page"></section>
+            <section class="tab-page"></section>
+            <section class="tab-page"></section>
+        </main>
+    </article>
+    <script src="ressurser.js"></script>
 </body>
 </html>
